# NeuralNetwork

./: CMakeLists.txt  ReadME.txt
Common/: Common.h  ReadME.txt
Examples/: PipelineInputConfigExample.json
Json/: CMakeLists.txt  ReadME.txt  Value.cpp  Value.h
NeuralNetworkManager/: CMakeLists.txt  NNManager.cpp  NNManager.h  NeuralNetworkManager.cpp  NeuralNetworkManager.h  ReadME.txt
NeuralNetworksCollection/: CMakeLists.txt  NeuralNetworksCollection.cpp  NeuralNetworksCollection.h  ReadME.txt
RunCommand/: CMakeLists.txt  ReadME.txt  RunCommand.cpp
Scripts/: CMakeScripts.cmake
